[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Profile.gd" type="Script" id=1]
[ext_resource path="res://assets/muscles-front.png" type="Texture" id=2]
[ext_resource path="res://assets/muscles-back.png" type="Texture" id=3]
[ext_resource path="res://fonts/academic.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/tabs/Tab.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.266667, 0.301961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.227451, 0.737255, 0.654902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.419608, 0.733333, 0.717647, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Profile" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -9.0
margin_top = -1.0
margin_right = 431.0
margin_bottom = 611.0
custom_styles/panel = SubResource( 1 )

[node name="MuscleFront" type="Sprite" parent="Panel"]
position = Vector2( 215, 220 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="MuscleBack" type="Sprite" parent="Panel"]
visible = false
position = Vector2( 233, 222 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="btnFrente" type="Button" parent="Panel"]
margin_left = 33.6345
margin_top = 530.944
margin_right = 189.635
margin_bottom = 574.944
rect_pivot_offset = Vector2( 121.091, 11.571 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0980392, 0.247059, 0.0196078, 1 )
text = "Frente"

[node name="btnCosta" type="Button" parent="Panel"]
margin_left = 259.213
margin_top = 531.62
margin_right = 415.213
margin_bottom = 575.62
rect_pivot_offset = Vector2( 121.091, 11.571 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0980392, 0.247059, 0.0196078, 1 )
text = "Costas"

[node name="Tabs" parent="." instance=ExtResource( 5 )]
margin_left = 431.341
margin_top = 6.0
margin_right = 1036.34
margin_bottom = 540.0
[connection signal="pressed" from="Panel/btnFrente" to="." method="_on_btnFrente_pressed"]
[connection signal="pressed" from="Panel/btnCosta" to="." method="_on_btnCosta_pressed"]
